# bruteforce

./: base_setup.sh  bruteforce.cabal  cabal.project
.github/workflows/: haskell.yaml  haskell.yml
Nebula/: Main.hs
src/: Signal.hs
